<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_mute"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:checkable="true"
        android:title="@string/menu_mute" />

    <item
        android:id="@+id/menu_members_add"
        android:orderInCategory="101"
        app:showAsAction="never"
        android:title="@string/menu_members_add"/>

    <item
        android:id="@+id/menu_members_remove"
        android:orderInCategory="102"
        app:showAsAction="never"
        android:title="@string/menu_members_remove"/>

    <item
        android:id="@+id/menu_view_members"
        android:orderInCategory="103"
        app:showAsAction="never"
        android:title="@string/menu_members_view"/>

    <item
        android:id="@+id/menu_rename"
        android:orderInCategory="104"
        app:showAsAction="never"
        android:title="@string/menu_rename"/>

    <item
        android:id="@+id/menu_leave"
        android:orderInCategory="105"
        app:showAsAction="never"
        android:title="@string/menu_leave" />

</menu>