<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_add"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:icon="?attr/menuAddIcon"
        android:title="@string/menu_add" />

    <item
        android:id="@+id/menu_friend_new"
        android:orderInCategory="101"
        app:showAsAction="never"
        android:title="@string/menu_add_friend" />

    <item
        android:id="@+id/menu_friend_list"
        android:orderInCategory="102"
        app:showAsAction="never"
        android:title="@string/menu_all_friends" />

    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="103"
        app:showAsAction="never"
        android:title="@string/menu_settings" />

</menu>