<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp">

        <Button
            android:id="@+id/user_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:padding="20dp"
            android:text="@string/user_search"
            android:textColor="#777" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:text="@string/user_new_or"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/user_broadcast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:padding="20dp"
            android:text="@string/user_new_broadcast"
            android:textColor="#777" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:text="@string/user_new_or"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/user_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:padding="20dp"
            android:text="@string/user_new_share"
            android:textColor="#777" />

    </LinearLayout>
</ScrollView>