<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/preference_user_name"
            android:textColor="#000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/registration_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/preference_reg_id"
            android:textColor="#000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/registration_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/preference_reg_lookup"
            android:textColor="#000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/registration_lookup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp" />

    </LinearLayout>
</ScrollView>